--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <section>
 
-        <div  class="uzui"> <a href="#" target="_blank" ><button> </button>uzui</a></div>
-        <div  class="inosuke"><a href="#" target="_blank" ><button> </button></a>inosuke</div>
-        <div  class="tanjiro"><a href="#" target="_blank" ><button> </button></a>tanjiro</div>
-        <div  class="nezuko"> <a href="#" target="_blank" ><button> </button></a>nezuko </div>
-        <div  class="zenitsu"><a href="#" target="_blank" ><button> </button></a>zenitsu</div>
+        <div  class="uzui"> <a href="#" target="_blank" ><button>uzui </button></a></div>
+        <div  class="inosuke"><a href="#" target="_blank" ><button>inosuke </button></a></div>
+        <div  class="tanjiro"><a href="#" target="_blank" ><button>tanjiro </button></a></div>
+        <div  class="nezuko"> <a href="#" target="_blank" ><button>nezuko </button></a> </div>
+        <div  class="zenitsu"><a href="#" target="_blank" ><button>zenitsu </button></a></div>
 
 
 
